--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@
 *.jar
 *.war
 *.ear
+
+.classpath
+.project
+.directory
+.svn
+.settings
+.metadata
+target
+build.sh~
+.gitignore~
+.gradle
+bin
+build
+.DS_Store
+.gradletasknamecache
+.groovy
+gradle-app.setting
